# picpicker

./: .gitignore  LICENSE  README.md  justfile  logo.icns  pyproject.toml  spec.md
.github/workflows/: build-desktop.yml
picpicker/: __init__.py  gui.py  main.py  version.py
tests/: test_about.py  test_copy_image.py  test_dialog_position.py  test_displayed_image_path.py  test_filename_search.py  test_image_position.py  test_keyboard_shortcuts.py  test_note_overlay.py  test_open_with.py  test_preview_context_menu.py  test_preview_drag.py  test_reveal_image_file.py  test_save_state.py
