[project]
name = "picpicker"
version = "0.1.0"
description = "PicPicker 比卡拾图：多文件夹图片对比、标记与导出工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0.0",
    "tkinterdnd2>=0.3.0",
]

[project.scripts]
picpicker = "picpicker.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["picpicker"]

[tool.hatch.build.targets.wheel.force-include]
"logo.png" = "picpicker/logo.png"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
build = [
    "pyinstaller==6.21.0",
]
